[gd_scene load_steps=5 format=3 uid="uid://ced8bvxys3o1"]

[ext_resource type="Script" uid="uid://co5366jb4vtt4" path="res://scripts/player.gd" id="1_g0yyf"]
[ext_resource type="PackedScene" uid="uid://dcchujjwo2k32" path="res://scenes/ships/tuggy.tscn" id="2_g0yyf"]
[ext_resource type="Script" uid="uid://b3jrhrmk6hphs" path="res://scripts/camera_pivot.gd" id="3_f5npd"]
[ext_resource type="PackedScene" uid="uid://budywedhvkcoa" path="res://scenes/ui/hud.tscn" id="4_hm1bh"]

[node name="Player" type="Node3D"]
script = ExtResource("1_g0yyf")

[node name="Ship" parent="." instance=ExtResource("2_g0yyf")]

[node name="CameraPivot" type="Node3D" parent="Ship" node_paths=PackedStringArray("target")]
top_level = true
script = ExtResource("3_f5npd")
target = NodePath("..")

[node name="CameraPivotX" type="Node3D" parent="Ship/CameraPivot"]

[node name="Camera" type="Camera3D" parent="Ship/CameraPivot/CameraPivotX"]
transform = Transform3D(-1, -7.6194e-09, -8.77555e-08, -1.52388e-08, 0.996195, 0.0871557, 8.67575e-08, 0.0871557, -0.996195, 4.37114e-08, 0.7, -1.5)
fov = 90.0

[node name="ReflectionProbe" type="ReflectionProbe" parent="Ship/CameraPivot/CameraPivotX/Camera"]
visible = false
update_mode = 1
size = Vector3(25, 12, 25)

[node name="HUD" parent="." instance=ExtResource("4_hm1bh")]

[connection signal="item_instanced" from="Ship" to="HUD" method="_on_ship_item_instanced"]
[connection signal="item_selected" from="Ship" to="HUD" method="_on_ship_item_selected"]
